--- a/JSocialNetworks-utils/pom.xml
+++ b/JSocialNetworks-utils/pom.xml
@@ -21,6 +21,13 @@
             <version>0.9.10</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
